Fix mobile scroll and layout issues

--- a/style.css
+++ b/style.css
@@ -135,10 +135,13 @@ td img {
 .row2 {
   border-top: 1px solid rgb(182, 178, 178);
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 .row2 img {
   margin-top: 16px;
   margin-right: 8px;
+  flex: 1;
 }
 .imgs {
   margin-top: 30px;
@@ -207,7 +210,7 @@ td img {
 
   .table {
     width: 100%;
-    padding: 0.5rem;
+    padding: 0rem;
     display: block;
     overflow-x: hidden;
   }
@@ -220,7 +223,10 @@ td img {
   }
   thead {
   }
+
+  th,
   td {
+    text-align: center;
   }
 
   .left {
